--- a/user-list.component.html
+++ b/user-list.component.html
@@ -5,18 +5,18 @@
         <th>Email</th>
         <th>Phone Number</th>
       </thead>
-      <tbody *ngFor="let control of userForm.get('users').controls; let i=index">
-        <tr [formGroup]="control">
+      <tbody>
+        <tr [formGroup]="control" *ngFor="let control of userForm.get('users').controls; let i=index">
           <td  class="form-group">
-            <input type="text" class="form-control" formControlName="name" placeholder="name">
+            <input type="text" class="form-control" formControlName="name" placeholder="name" (change)="dataToUpdate(i)">
             <span class="text-danger" *ngIf="control.get('name').touched && control.get('name').invalid">name is required</span>
           </td>
           <td class="form-group">
-            <input type="text" class="form-control" formControlName="email" placeholder="email">
+            <input type="text" class="form-control" formControlName="email" placeholder="email" (change)="dataToUpdate(i)">
             <span class="text-danger" *ngIf="control.get('email').touched && control.get('email').invalid">email required</span>
           </td>
           <td  class="form-group">
-            <input type="text" class="form-control" formControlName="mobNumber" placeholder="mobile number">
+            <input type="text" class="form-control" formControlName="mobNumber" placeholder="mobile number" (change)="dataToUpdate(i)">
           </td>
           <td>
             <button (click)="remove(i)" class="btn btn-primary mr-5">Remove</button>
